--- a/photography/photography.html
+++ b/photography/photography.html
@@ -36,6 +36,10 @@
         <img src="jpg/jap2.jpg" alt="jap2">
         <img src="jpg/jap3.jpg" alt="jap3">
         <img src="jpg/jap4.jpg" alt="jap4">
+        <img src="jpg/LHu-23.jpg" alt="lhu1">
+        <img src="jpg/LHu-25.jpg" alt="lhu2">
+        <img src="jpg/LHu-3.jpg" alt="lhu3">
+        <img src="jpg/LHu-9.jpg" alt="lhu4">
 
     </div>
 </html>
